changing name of directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-/insight/__pycache__/*
+/temps/__pycache__/*
 /notebooks/.ipynb_checkpoints/
 /notebooks/*.ipynb
 /notebooks/developer_notebooks
-insight/.ipynb_checkpoints/
+temps/.ipynb_checkpoints/
 *.ipynb
