--- a/.github/workflows/huggingface.yml
+++ b/.github/workflows/huggingface.yml
@@ -17,4 +17,5 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push --force https://lauracabayol:$HF_TOKEN@huggingface.co/spaces/lauracabayol/TEMPS main
+        run: git push --force https://lauracabayol:$HF_TOKEN@huggingface.co/spaces/lauracabayol/TEMPS master:main
+
