--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ dependencies = [
     "astropy",
     "gradio",
     "jupytext",
-    "mkdocs"
+    "mkdocs",
+    "mkdocstrings"
 ]
 
 classifiers = [
