--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -17,9 +17,14 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
-      - run: pip install mkdocs
-      - run: mkdocs build
-      - name: List Site Files
-        run: ls -l site/
-      - name: Deploy Documentation to GitHub Pages
-        run: mkdocs gh-deploy --force        
+      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
+      - uses: actions/cache@v4
+        with:
+          key: mkdocs-material-${{ env.cache_id }}
+          path: .cache
+          restore-keys: |
+            mkdocs-material-
+      - run: pip install mkdocs-material 
+      - name: Build and Deploy Documentation
+        working-directory: docs
+        run: mkdocs gh-deploy --force
