--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -35,6 +35,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Python 3.x
         uses: actions/setup-python@v4
+      - name: Install dependencies
+        run: pip install mkdocs-material 
         with:
           python_version: '3.x' # Uses latest 3.x version.
       - name: Build Docs
