--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -1,53 +1,30 @@
-name: Build and deploy
-
+name: deploy_docs 
 on:
-  workflow_dispatch: # Allow manual triggers
   push:
-    tags-ignore:
-      - '**' # Ignore any tags here
     branches:
-      - main
       - master
-    #
-    # Trigger when either files in the docs folder,
-    # the requirements.txt file or the mkdocs.yml file
-    # are edited and commited.
-    #paths:
-    #  - 'docs/**'
-# These permissions are required for it to work
 permissions:
-  contents: read
-  pages: write
-# Makes sure only one workflow runs at a time.
-concurrency:
-  group: 'pages'
-  cancel-in-progress: false
-
+  contents: write
 jobs:
-  buildAndDeploy:
+  deploy:
     runs-on: ubuntu-latest
-    # This environment is required!
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.pages_url }}
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-      - name: Setup Python 3.x
-        uses: actions/setup-python@v4
-      - name: Install dependencies
-        run: pip install mkdocs-material 
+      - uses: actions/checkout@v4
+      - name: Configure Git Credentials
+        run: |
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+      - uses: actions/setup-python@v5
         with:
-          python_version: '3.x' # Uses latest 3.x version.
-      - name: Build Docs
-        run: mkdocs build
-      - name: Configure GitHub Pages
-        # I have no idea if this actually needed...
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+          python-version: 3.x
+      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
+      - uses: actions/cache@v4
         with:
-          path: 'site/' # MkDocs builds to site/ by default
-      - name: Deploy to GitHub Pages
-        id: deployment # This is required for environment
-        uses: actions/deploy-pages@v2
+          key: mkdocs-material-${{ env.cache_id }}
+          path: .cache
+          restore-keys: |
+            mkdocs-material-
+      - run: pip install mkdocs-material 
+      - name: Build and Deploy Documentation
+        working-directory: docs
+        run: mkdocs gh-deploy --force
