--- a/.github/workflows/basic_AT.yml
+++ b/.github/workflows/basic_AT.yml
@@ -32,8 +32,8 @@ jobs:
     - name: Download model files
       run: |
         mkdir -p data/models
-        wget -O data/models/modelF_DA.pt https://raw.githubusercontent.com/TEMPS/master/data/models/modelF_DA.pt
-
+        wget -O data/models/modelF_DA.pt https://raw.githubusercontent.com/TEMPS-project/TEMPS/master/data/models/modelF_DA.pt
+        wget -O data/models/modelZ_DA.pt https://raw.githubusercontent.com/TEMPS-project/TEMPS/master/data/models/modelZ_DA.pt
     # Run the tests and specify the temporary directory as output_dir
     - name: Run tests
       timeout-minutes: 5
